--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;500;600&display=swap');
-/* @import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css"); */
 
 *{
     margin: 0;
@@ -429,4 +428,42 @@ footer{
 }
 .col1>div>div>button{
     cursor: pointer;
+}
+.sumcontent{
+    display: flex;
+    gap: 40px;
+    margin: 20px 0;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.boxcontent{
+    padding: 15px 20px;
+    background: rgba(73, 114, 202, 0.91);
+    color: white;
+    text-align: center;
+    border: 1px solid rgba(73, 114, 202, 0.91);
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 5px 20px 0 rgba(128, 128, 128, 0.400);
+    border-left: 10px solid rgb(56, 84, 107);
+}
+.boxcontent>p{
+    margin-top: 5px;
+    font-size: 3rem;
+    width: 200px;
+    font-weight: 300;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 15px;
+}
+.boxcontent:hover{
+    transform: translateY(-5px);
+}
+.chartbox{
+    width: 450px;
+    height: auto;
+}
+#updateobat{
+    /* display: none; */
 }
